<resources>
    <string name="app_name">Trivia Game</string>
    <string name="welcome">Welcome to</string>
    <string name="chooseCategory">Choose your category:</string>
    <string name="playerCount">Player count:</string>
    <string name="playButton">Start Game!</string>
    <string name="playAgain">Play Again?</string>
    <string name="nextPlayerInstructions">Pass the phone to the next player, then click begin!</string>
    <string name="nextPlayerButton">Begin!</string>
    <string name="homeButton">Quit?</string>
    <string name="categoryButton">Select Category</string>
    <string name="playersButton">Select Players</string>
    <string name="infinity">Infinity</string>
    <string name="classic">Classic</string>
    <string name="select_gamemode">Select Gamemode</string>
    <string name="player_num">Player #</string>
    <string name="any_text">Any</string>
    <string name="time_remaining">Time Remaining:</string>
</resources>