<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@drawable/img_background">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="35sp"
        style="@style/customTextColor"
        android:shadowDx="-5"
        android:shadowDy="-5"
        android:shadowRadius="15"
        android:shadowColor="@color/black"/>

    <TextView
        android:id="@+id/triviaGameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="70sp"
        android:text="@string/app_name"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/customTextColor"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="20"
        android:shadowColor="@color/goldBackground"/>

    <TextView
        android:id="@+id/categoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/triviaGameText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/chooseCategory"
        android:textAlignment="center"
        android:textSize="30sp"
        style="@style/customTextColor"
        android:shadowDx="-5"
        android:shadowDy="-5"
        android:shadowRadius="15"
        android:shadowColor="@color/black"/>

    <TextView
        android:id="@+id/categoryDisplay"
        style="@style/customTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/categoryText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:shadowColor="@color/black"
        android:shadowDx="-5"
        android:shadowDy="-5"
        android:shadowRadius="15"
        tools:text="Science: Computers"
        android:textSize="30sp" />

    <Button
        android:id="@+id/categoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoryButton"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/categoryDisplay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="25sp"
        style="@style/customTextColor"
        android:backgroundTint="@color/bronze"/>


    <TextView
        android:id="@+id/playerCountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/categoryButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/playerCount"
        android:textAlignment="center"
        android:textSize="30sp"
        style="@style/customTextColor"
        android:shadowDx="-5"
        android:shadowDy="-5"
        android:shadowRadius="15"
        android:shadowColor="@color/black"/>

    <TextView
        android:id="@+id/playerCountDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/playerCountText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="1"
        android:textAlignment="center"
        android:textSize="30sp"
        style="@style/customTextColor"
        android:shadowDx="-5"
        android:shadowDy="-5"
        android:shadowRadius="15"
        android:shadowColor="@color/black"/>

    <Button
        android:id="@+id/playersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playersButton"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/playerCountDisplay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="25sp"
        style="@style/customTextColor"
        android:backgroundTint="@color/bronze"/>


    <TextView
        android:id="@+id/gameModeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_gamemode"
        app:layout_constraintTop_toBottomOf="@id/playersButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        style="@style/customTextColor"/>
    <RadioGroup
        android:id="@+id/modeSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/gameModeText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/classicRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classic"
            style="@style/customTextColor"
            android:textSize="22sp"
            android:paddingHorizontal="10dp"
            android:checked="true" />
        <RadioButton
                android:id="@+id/infinityRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/infinity"
                style="@style/customTextColor"
                android:textSize="22sp"
                android:paddingHorizontal="10dp" />
    </RadioGroup>

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playButton"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/modeSelect"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="25sp"
        style="@style/customTextColor"
        android:backgroundTint="@color/startGameColor"/>

</androidx.constraintlayout.widget.ConstraintLayout>